sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:4: error: illegal start of simple expression
      for (i<- 0 to getValueCount()-2) {
^AlgCocktailSort1:15: error: illegal start of simple expression
        while (swapped);
                       ^